# model-template

./: .gitignore  .readthedocs.yaml  Makefile  README.md  setup.cfg  setup.py  tox.ini
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: python-ci.yml  python-tests.yml
docs/: api.rst  conf.py  indx.rst
requirements/: dev.in  docs.in  pkg.in  tests.in  update.sh
src/: __init__.py  __version__.py
src/BASE_PACKAGE/: __init__.py
tests/: test_this.py
